# key-logger

./: .env  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  keyboards.ts  main.ts  style.css
src-tauri/: .env  .gitignore  Cargo.toml  data.db  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: event.rs  lib.rs  prelude.rs
src-tauri/migration/: README.md
src-tauri/migrations/2022-09-25-170324_create_key_event_table/: down.sql  up.sql
src-tauri/src/: command.rs  error.rs  key_logger.rs  lib.rs  listener.rs  main.rs  pipeline.rs  recorder.rs  sql.rs
src-tauri/src/command/: mod.rs
src-tauri/src/database/query/: event.rs
src-tauri/src/db/: mod.rs  models.rs  query.rs  schema.rs
src-tauri/src/key_logger/: mod.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/recorder/: mod.rs
src/components/: Key.vue  Keyboard.vue
src/types/: vue-env.d.ts
