[workspace]
members = [
  "packages/client",
  "packages/entity",
  "packages/migration",
  "packages/shared",
]

[workspace.dependencies]
sea-orm = { version = "0.10.3", features = [
  "sqlx-sqlite",
  "runtime-async-std-rustls",
  "macros",
  "debug-print",
] }
entity = { path = "packages/entity" }
migration = { path = "packages/migration" }
shared = { path = "packages/shared" }
tokio = { version = "1.22.0", features = ["full"] }
