[package]
name = "key-logger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
rdev = { version= "0.5.1", features= ["serialize"] }
dotenv = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
diesel = { version = "2.0.0", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
chrono = "0.4.22"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
